--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
-    <h1>Hello!</h1>
+    <form action="#" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
 
 {% endblock %}
