--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <form action="#" method="post">
+    <form action="#" method="POST">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
