--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -4,7 +4,8 @@
 
     <form action="#" method="POST">
         {% csrf_token %}
-        {{ form }}
+        {{ form.private }}
+        {{ form.body }}
         <input type="submit" value="Submit">
     </form>
 
