--- a/templates/base.html
+++ b/templates/base.html
@@ -4,20 +4,34 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <style>
+            body, height {
+                min-height: 100vh;
+            }
+        </style>
         <title>Django Paste</title>
     </head>
     <body>
-        <div id="page-container">
-            <header>
-                {% include 'navigation/navigation_bar.html' %}
-            </header>
-            <main>
-                {% block content %}
-                {% endblock %}
-            </main>
-            <footer>
-                {% include 'footer/footer.html' %}
-            </footer>
+        <div class="container">
+            <div class="row">
+                <header>
+                    {% include 'navigation/navigation_bar.html' %}
+                </header>
+            </div>
+            <div class="row">
+                <main>
+                    {% block content %}
+                    {% endblock %}
+                </main>
+            </div>
+            <div class="row">
+                <footer>
+                    {% include 'footer/footer.html' %}
+                </footer>
+            </div>
         </div>
     </body>
 </html>
