--- a/templates/base.html
+++ b/templates/base.html
@@ -7,44 +7,26 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <style>
-            body {
-                display: flex;
-                min-height: 100vh;
-                flex-direction: column;
-                flex: 1;
-            }
-
-            #header-wrapper {
-                flex: auto;
-            }
-
-            #main-wrapper {
-                flex: 1;
-            }
-
-            #footer-wrapper {
-                flex: 0;
-            }
-        </style>
         <title>Django Paste</title>
     </head>
     <body>
-        <div id="header-wrapper">
-            <header>
-                {% include 'navigation/navigation_bar.html' %}
-            </header>
-        </div>
-        <div id="main-wrapper">
-            <main>
-                {% block content %}
-                {% endblock %}
-            </main>
-        </div>
-        <div id="footer-wrapper">
-            <footer class="page-footer">
-                {% include 'footer/footer.html' %}
-            </footer>
+        <div id="page-wrapper" class="container">
+            <div id="header-wrapper">
+                <header>
+                    {% include 'navigation/navigation_bar.html' %}
+                </header>
+            </div>
+            <div id="main-wrapper">
+                <main>
+                    {% block content %}
+                    {% endblock %}
+                </main>
+            </div>
+            <div id="footer-wrapper">
+                <footer class="page-footer">
+                    {% include 'footer/footer.html' %}
+                </footer>
+            </div>
         </div>
     </body>
 </html>
