--- a/pastes/templates/paste_details.html
+++ b/pastes/templates/paste_details.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <pre>
-        <code class="language-{{ syntax }}">{{ paste }}</code>
+        <code class="line-numbers language-{{ syntax }}">{{ paste }}</code>
     </pre>
 
 {% endblock content %}
