--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -1,4 +1,6 @@
 <nav class="flex width-100 bar-bg-col">
     <h1 class="nav-item primary-fc text-center">Django Paste</h1>
-    <a href="#" class="nav-item">New Paste</a>
+    <a href="#" class="nav-item text-center">New Paste</a>
+    <a href="#" class="nav-item text-center">About</a>
+    <a href="#" class="nav-item text-center">Log In</a>
 </nav>
