--- a/templates/footer/footer.html
+++ b/templates/footer/footer.html
@@ -1,3 +1,3 @@
-<div>
-    Test footer
-</div>
+<footer class="flex justify-center align-center bar-bg-col primary-fc">
+    <h2>© 2023 Dustin Greyfield</h2>
+</footer>
