--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        Test main
+    <div id="new-paste-container" class="grid">
+        <div>Form</div>
+        <div>Recent</div>
     </div>
 {% endblock %}
