--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,7 @@ body, html {
     --primary-background-col: white;
     --secondary-background-col: green;
     --bar-background-col: rgb(12, 75, 51);
+    --bar-background-col-contrast: rgb(31, 164, 113);
     --bar-background-col-shadow: rgb(65, 101, 87);
     /* Font Colors */
     --primary-font-col: white;
@@ -54,8 +55,15 @@ a {
 nav {
     margin-left: 1rem;
     margin-top: 1rem;
-    border-radius: 5px 0 0 5px;
+    border-radius: 1rem 0 0 1rem;
+    border-bottom: 5px solid var(--bar-background-col-contrast);
     box-shadow: -5px 10px 0.75rem var(--bar-background-col-shadow);
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    height: 80%;
 }
 
 /* ========= *
@@ -148,9 +156,26 @@ footer > h2 {
     margin-bottom: 1rem;
 }
 
-#new-paste-container {
+#paste-home-container {
     grid-template-columns: 3fr 1fr;
-    min-width: 80%;
+    gap: 2rem;
+    width: 100%;
+}
+
+#paste-form {
+    margin-left: 4rem;
+}
+
+#recent-pastes, #paste-form-container {
+    padding: 1rem;
+    border-radius: 1rem 0 0 1rem;
+    border-bottom: 0.5rem solid var(--bar-background-col-contrast);
+    box-shadow: -5px 10px 0.75rem var(--bar-background-col-shadow);
+}
+
+#paste-form-container {
+    margin-left: 20%;
+    border-radius: 1rem;
 }
 
 .nav-item {
@@ -170,3 +195,5 @@ footer > h2 {
 .nav-item:last-child {
     margin-right: 2rem;
 }
+
+/* TESTING */
