--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -1,5 +1,5 @@
 <nav class="flex margin-bottom-gap bar-bg-col">
-    <h1 class="nav-item primary-fc text-center">Django Paste</h1>
+    <h1 class="nav-item primary-fc text-center">django paste</h1>
     <a href="#" class="nav-item text-center">New Paste</a>
     <a href="#" class="nav-item text-center">About</a>
     <a href="#" class="nav-item text-center">Log In</a>
