complete: added left side bar

--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <div id="paste-home-container" class="grid width-100">
+        <div id="news" class="bar-bg-col primary-fc">
+            <h2 class="text-vertical">Global Pastes</h2>
+        </div>
         <div class="flex justify-center">
             <div id="paste-form-container" class="grid width-100 align-start bar-bg-col primary-fc">
                 <form class="width-100 height-100" action="#" method="POST">
