--- a/templates/navigation/navigation_bar.html
+++ b/templates/navigation/navigation_bar.html
@@ -2,7 +2,7 @@
 <nav class="flex margin-bottom-gap bar-bg-col">
     <img class="nav-item" src={% static 'images/python-logo.png' %} alt="">
     <h1 class="nav-item primary-fc text-center">django paste</h1>
-    <a href="#" class="nav-item text-center">New Paste</a>
+    <a href="/" class="nav-item text-center">New Paste</a>
     <a href="#" class="nav-item text-center">About</a>
     <a href="#" class="nav-item text-center">Log In</a>
 </nav>
