--- a/pastes/templates/paste_upload.html
+++ b/pastes/templates/paste_upload.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div id="paste-home-container" class="grid width-100">
-        <div id="news" class="bar-bg-col primary-fc">
-            <h2 class="text-vertical">Global Pastes</h2>
+        <div id="news" class="side-bar bar-bg-col primary-fc">
+            <h2 class="text-vertical text-center">Global Pastes</h2>
         </div>
-        <div class="flex justify-center">
+        <div id="paste-form-container-wrapper" class="flex justify-center">
             <div id="paste-form-container" class="grid width-100 align-start bar-bg-col primary-fc">
                 <form class="width-100 height-100" action="#" method="POST">
                     {% csrf_token %}
@@ -55,8 +55,11 @@
                 </div>
             </div>
         </div>
-        <div id="recent-pastes" class="bar-bg-col primary-fc">
+        <div id="recent-pastes" class="side-bar bar-bg-col primary-fc">
             <h2 class="text-vertical">Recent Pastes</h2>
+        </div>
+        <div id="news" class="side-bar bar-bg-col primary-fc">
+            <h2 class="text-vertical">News</h2>
         </div>
     </div>
     <script>
